@@ -1,18 +1,19 @@
 ##
-#  File:           CARDTargetFeatureProvider.py
-#  Date:           12-Jun-2021 jdw
+#  File:           CARDTargetAnnotationProvider.py
+#  Date:           6-Mar-2023 dwp
 #
 #  Updated:
 #
 ##
 """
-Accessors and generators for CARD target feature data.
+Accessors and generators for CARD target annotation data.
 """
 
 import datetime
 import logging
 import os.path
 import time
+from collections import Counter
 
 from rcsb.utils.io.FileUtil import FileUtil
 from rcsb.utils.io.MarshalUtil import MarshalUtil
@@ -22,14 +23,14 @@ from rcsb.utils.targets.CARDTargetProvider import CARDTargetProvider
 logger = logging.getLogger(__name__)
 
 
-class CARDTargetFeatureProvider(StashableBase):
-    """Accessors and generators for CARD target feature data."""
+class CARDTargetAnnotationProvider(StashableBase):
+    """Accessors and generators for CARD target annotation data."""
 
     def __init__(self, **kwargs):
         #
         self.__cachePath = kwargs.get("cachePath", ".")
-        self.__dirName = "CARD-features"
-        super(CARDTargetFeatureProvider, self).__init__(self.__cachePath, [self.__dirName])
+        self.__dirName = "CARD-annotations"
+        super(CARDTargetAnnotationProvider, self).__init__(self.__cachePath, [self.__dirName])
         self.__dirPath = os.path.join(self.__cachePath, self.__dirName)
         #
         self.__mU = MarshalUtil(workPath=self.__dirPath)
@@ -37,18 +38,18 @@ class CARDTargetFeatureProvider(StashableBase):
         #
 
     def testCache(self, minCount=590):
-        logger.info("CARD feature count %d", len(self.__fD["features"]) if "features" in self.__fD else 0)
-        if self.__fD and "features" in self.__fD and len(self.__fD["features"]) > minCount:
+        logger.info("CARD annotation count %d", len(self.__fD["annotations"]) if "annotations" in self.__fD else 0)
+        if self.__fD and "annotations" in self.__fD and len(self.__fD["annotations"]) > minCount:
             return True
         else:
             return False
 
-    def hasFeatures(self, rcsbEntityId):
-        return rcsbEntityId.upper() in self.__fD["features"]
+    def hasAnnotations(self, rcsbEntityId):
+        return rcsbEntityId.upper() in self.__fD["annotations"]
 
-    def getFeatures(self, rcsbEntityId):
+    def getAnnotations(self, rcsbEntityId):
         try:
-            return self.__fD["features"][rcsbEntityId.upper()]
+            return self.__fD["annotations"][rcsbEntityId.upper()]
         except Exception:
             pass
         return []
@@ -57,19 +58,19 @@ class CARDTargetFeatureProvider(StashableBase):
         self.__fD = self.__reload(self.__dirPath, useCache=True)
         return True
 
-    def __getFeatureDataPath(self):
-        return os.path.join(self.__dirPath, "CARD-feature-data.json")
+    def __getAnnotationDataPath(self):
+        return os.path.join(self.__dirPath, "CARD-annotation-data.json")
 
     def __reload(self, dirPath, **kwargs):
         startTime = time.time()
         fD = {}
         useCache = kwargs.get("useCache", True)
         ok = False
-        featurePath = self.__getFeatureDataPath()
+        annotationPath = self.__getAnnotationDataPath()
         #
-        logger.info("useCache %r featurePath %r", useCache, featurePath)
-        if useCache and self.__mU.exists(featurePath):
-            fD = self.__mU.doImport(featurePath, fmt="json")
+        logger.info("useCache %r annotationPath %r", useCache, annotationPath)
+        if useCache and self.__mU.exists(annotationPath):
+            fD = self.__mU.doImport(annotationPath, fmt="json")
         else:
             fU = FileUtil()
             fU.mkdir(dirPath)
@@ -77,8 +78,8 @@ class CARDTargetFeatureProvider(StashableBase):
         logger.info("Completed reload (%r) at %s (%.4f seconds)", ok, time.strftime("%Y %m %d %H:%M:%S", time.localtime()), time.time() - startTime)
         return fD
 
-    def buildFeatureList(self, sequenceMatchFilePath, useTaxonomy=False):
-        """Build polymer entity feature list for the matching entities in the input sequence match file.
+    def buildAnnotationList(self, sequenceMatchFilePath, useTaxonomy=False):
+        """Build polymer entity annotation list for the matching entities in the input sequence match file.
 
         Args:
             sequenceMatchFilePath (str): sequence match output file path
@@ -86,8 +87,6 @@ class CARDTargetFeatureProvider(StashableBase):
 
         Returns:
             bool: True for success or False otherwise
-
-
         """
         rDL = []
         cardP = CARDTargetProvider(cachePath=self.__cachePath, useCache=False)
@@ -106,27 +105,39 @@ class CARDTargetFeatureProvider(StashableBase):
             for matchD in matchDL:
                 #
                 fpL = []
-                if "alignedRegions" in matchD:
-                    fpL = [{"beg_seq_id": arD["targetBegin"], "end_seq_id": arD["targetEnd"]} for arD in matchD["alignedRegions"]]
-                else:
-                    fpL = [{"beg_seq_id": matchD["targetBegin"], "end_seq_id": matchD["targetEnd"]}]
+                # if "alignedRegions" in matchD:
+                #     fpL = [{"beg_seq_id": arD["targetBegin"], "end_seq_id": arD["targetEnd"]} for arD in matchD["alignedRegions"]]
+                # else:
+                #     fpL = [{"beg_seq_id": matchD["targetBegin"], "end_seq_id": matchD["targetEnd"]}]
                 tCmtD = self.__decodeComment(matchD["target"])
                 entryId = tCmtD["entityId"].split("_")[0]
                 entityId = tCmtD["entityId"].split("_")[1]
                 nm = cardP.getModelKey(modelId, "modelName")
                 descr = cardP.getModelKey(modelId, "descr")
-                featureId = cardP.getModelKey(modelId, "cvTermId")
+                cvTermId = cardP.getModelKey(modelId, "cvTermId")
+                annotationId = cardP.getModelKey(modelId, "accession")
+                familyCvTermId = cardP.getModelKey(modelId, "familyCvTermId")
+                familyName = cardP.getModelKey(modelId, "familyName")
+                familyAnnotationId = cardP.getModelKey(modelId, "familyAccession")
+                drugClasses = cardP.getModelKey(modelId, "drugClasses")
+                resistanceMechanism = cardP.getModelKey(modelId, "resistanceMechanism")
                 rD = {
                     "entry_id": entryId,
                     "entity_id": entityId,
-                    "type": "CARD_MODEL",
-                    "feature_id": featureId,
+                    # "type": "CARD",
+                    "annotation_id": "ARO:" + annotationId,
+                    "card_aro_cvterm_id": cvTermId,
                     "name": nm,
+                    "family_annotation_id": "ARO:" + familyAnnotationId,
+                    "family_card_aro_cvterm_id": familyCvTermId,
+                    "family_name": familyName,
+                    "card_aro_drug_class": drugClasses,
+                    "card_aro_resistance_mechanism": resistanceMechanism,
                     "description": descr,
                     "provenance_source": provenanceSource,
                     "reference_scheme": refScheme,
                     "assignment_version": assignVersion,
-                    "feature_positions": fpL,
+                    "annotation_positions": fpL,
                     "query_tax_name": matchD["queryTaxName"] if "queryTaxName" in matchD else None,
                     "target_tax_name": matchD["targetTaxName"] if "targetTaxName" in matchD else None,
                     "match_status": matchD["taxonomyMatchStatus"] if "taxonomyMatchStatus" in matchD else None,
@@ -138,15 +149,35 @@ class CARDTargetFeatureProvider(StashableBase):
         dD = {}
         for rD in rDL:
             eId = rD["entry_id"] + "_" + rD["entity_id"]
-            fId = rD["feature_id"]
+            fId = rD["annotation_id"]
             if (eId, fId) in dD:
                 continue
             dD[(eId, fId)] = True
             qD.setdefault(eId, []).append(rD)
         # --
+        # Check whether entities match multiple CARD annotations or demonstrate a perfect match
+        qcD = {}
+        for eId, rDL in qD.items():
+            if len(rDL) == 1:
+                rD = rDL[0]
+                rD["perfect_match"] = "Y"  # indicates there's a direct 1:1 of CARD match with entity
+                # rD["card_aro_category"] = "AMR Gene"
+                qcD[eId] = [rD]
+            else:
+                # Run check if all items of rDL have the same FAMILY
+                # Count up number of each type of family the items of rDL contain
+                familyAnnotationIdCounts = dict(Counter([rD["family_annotation_id"] for rD in rDL]))
+                # familyAnnotationIds = set([rD["family_annotation_id"] for rD in rDL])
+                if len(familyAnnotationIdCounts) > 1:
+                    logger.info("eId %s familyAnnotationIdCounts: %r", eId, familyAnnotationIdCounts)
+                rD = rDL[0]
+                rD["perfect_match"] = "N"  # indicates there were multiple CARDs matching the given entity
+                # rD["card_aro_category"] = "AMR Gene Family"
+                qcD[eId] = [rD]
+        # --
         if useTaxonomy:
             fqD = {}
-            for eId, rDL in qD.items():
+            for eId, rDL in qcD.items():
                 mL = []
                 oL = []
                 for rD in rDL:
@@ -163,13 +194,13 @@ class CARDTargetFeatureProvider(StashableBase):
                 logger.debug("eId %r mL (%d) oL (%d)", eId, len(mL), len(oL))
                 fqD.setdefault(eId, []).extend(mL if mL else oL)
         else:
-            fqD = qD
+            fqD = qcD
         # --
 
-        fp = self.__getFeatureDataPath()
+        fp = self.__getAnnotationDataPath()
         tS = datetime.datetime.now().isoformat()
         vS = datetime.datetime.now().strftime("%Y-%m-%d")
-        ok = self.__mU.doExport(fp, {"version": vS, "created": tS, "features": fqD}, fmt="json", indent=3)
+        ok = self.__mU.doExport(fp, {"version": vS, "created": tS, "annotations": fqD}, fmt="json", indent=3)
         return ok
 
     def __decodeComment(self, comment, separator="|"):
