@@ -3,7 +3,7 @@
 #  Date:           27-Nov-2020 jdw
 #
 #  Updated:
-#
+#    6-Mar-2023 dwp  Add filterForHomologs() method to filter CARD data for only protein homolog models
 ##
 """
 Accessors for CARD target assignments.
@@ -39,12 +39,12 @@ class CARDTargetProvider:
         else:
             return False
 
-    def hasFeature(self, modelId):
+    def hasModel(self, modelId):
         return modelId in self.__oD
 
-    def getFeature(self, modelId, featureKey):
+    def getModelKey(self, modelId, key):
         try:
-            return self.__oD[modelId][featureKey]
+            return self.__oD[modelId][key]
         except Exception:
             return None
 
@@ -87,6 +87,10 @@ class CARDTargetProvider:
             fU.unbundleTarfile(os.path.join(cardDumpDirPath, cardDumpFileName[:-4]), dirPath=cardDumpDirPath)
             logger.info("Completed fetch (%r) at %s (%.4f seconds)", ok, time.strftime("%Y %m %d %H:%M:%S", time.localtime()), time.time() - startTime)
             oD, version = self.__parseCardData(os.path.join(cardDumpDirPath, "card.json"))
+            #
+            # Filter for only protein homolog models (this can be removed if/when we decide to include all types of models)
+            oD = self.__filterForHomologs(os.path.join(cardDumpDirPath, "protein_fasta_protein_homolog_model.fasta"), oD)
+            #
             tS = datetime.datetime.now().isoformat()
             qD = {"version": version, "created": tS, "data": oD}
             oD = qD["data"]
@@ -115,7 +119,7 @@ class CARDTargetProvider:
             for modelId, tD in cardD.items():
                 modelBitScore = None
                 # aroAcc = tD["accession"]
-                aroId = tD["id"]
+                aroId = tD["cvTermId"]
                 if "sequences" not in tD:
                     continue
                 modelBitScore = tD["modelBitScore"] if "modelBitScore" in tD else None
@@ -164,18 +168,33 @@ class CARDTargetProvider:
                     if modelId == "_version":
                         version = mD
                     continue
-                oD[modelId] = {}
+                oD[modelId] = {}  # modelId = '1028'
                 for kTup in [
-                    ("ARO_accession", "accession"),
-                    ("ARO_id", "id"),
-                    ("ARO_name", "name"),
-                    ("ARO_description", "descr"),
-                    ("model_name", "modelName"),
-                    ("model_type", "modelType"),
+                    ("ARO_accession", "accession"),  # 'ARO_accession', '3001059'
+                    ("ARO_id", "cvTermId"),  # 'ARO_id', '37439'
+                    ("ARO_name", "name"),  # 'ARO_name', 'SHV-1'
+                    ("ARO_description", "descr"),  # 'SHV-1 is a broad-spectrum beta-lactamase...
+                    ("model_name", "modelName"),  # 'model_name', 'SHV-1'
+                    ("model_type", "modelType"),  # 'model_type', 'protein homolog model'
                 ]:
                     if kTup[0] in mD:
                         oD[modelId][kTup[1]] = mD[kTup[0]]
-
+                # Add in category details (Family, Drug Class(es), and Resistance mechanism)
+                acD = {}
+                if "ARO_category" in mD:
+                    aroCategoryD = mD["ARO_category"]  # 'ARO_category', large dict containing each type of 'category_aro_class_name' ("AMR Gene Family", "Drug Class", ...)
+                    for cvId, catD in aroCategoryD.items():
+                        if all([k in catD for k in ["category_aro_class_name", "category_aro_accession", "category_aro_name"]]):
+                            if catD["category_aro_class_name"] == "AMR Gene Family":
+                                acD["familyCvTermId"] = cvId
+                                acD["familyAccession"] = catD["category_aro_accession"]
+                                acD["familyName"] = catD["category_aro_name"]
+                            if catD["category_aro_class_name"] == "Drug Class":
+                                acD.setdefault("drugClasses", []).append(catD["category_aro_name"])
+                            if catD["category_aro_class_name"] == "Resistance Mechanism":
+                                acD["resistanceMechanism"] = catD["category_aro_name"]
+                oD[modelId].update(acD)
+                #
                 try:
                     if "model_sequences" in mD:
                         for seqId, tD in mD["model_sequences"]["sequence"].items():
@@ -195,3 +214,26 @@ class CARDTargetProvider:
         except Exception as e:
             logger.exception("Failing with %s", str(e))
         return oD, version
+
+    def __filterForHomologs(self, filePath, targetD):
+        """Filter the CARD target data to select only for protein homologs
+
+        Args:
+            filePath (str): path to CARD fasta protein homoolog model file (protein_fasta_protein_homolog_model.fasta; from source)
+            targetD (dict): dictionary generated from __parseCardData (i.e., oD)
+
+        Returns:
+            (dict): filtered card selected data dictionary
+        """
+
+        with open(filePath, "r", encoding="utf-8") as f:
+            data = f.readlines()
+
+        aroL = [i.split("|")[2].strip("ARO:") for i in data if i.startswith(">")]
+
+        filteredD = {}
+        for k, v in targetD.items():
+            if v["accession"] in aroL:
+                filteredD.update({k: v})
+
+        return filteredD
